debut correction barbier

--- a/Chapitre1.tex
+++ b/Chapitre1.tex
@@ -15,7 +15,7 @@
 \section{Introduction}
 		
 		La recherche de biomarqueurs originaux issues de l’Imagerie par Résonance Magnétique (IRM) multimodale est un enjeu médical majeur du fait du caractère non-invasif et relativement peu 
-couteux de cette technique. L'imagerie par résonnance magnétique nucléaire est en effet un outil d'une grande versatilité qui permet de fournir plusieurs « points de vue » aussi bien concernant 
+couteux de cette technique. L'imagerie par résonance magnétique nucléaire est en effet un outil d'une grande versatilité qui permet de fournir plusieurs « points de vue » aussi bien concernant 
 la structure que la dynamique cérébrale. L’étude de la rhéologie du système vasculaire encéphalique en IRM peut recourir à divers outils non invasifs tels que l’imagerie de perfusion par marquage 
 des protons artériels du sang (Arterial Spin Labeling ou ASL -~\cite{Alsop2014}), l’imagerie en contraste de phase ou l’imagerie de susceptibilité (Susceptibility Weighted Imaging, SWI). Ces mesures permettent 
 l’estimation de différents paramètres de la rhéologie intracrânienne. On peut alors espérer, dans un contexte pathologique particulier, découvrir dans une des différentes modalités d'imagerie le 
@@ -48,7 +48,7 @@ La seconde condition est de choisir la stratégie de modélisation la plus adapt
 En vue d’aboutir à un modèle sujet-spécifique le plus correct possible il sera essentiel de décrire la structure de la vascularisation cérébrale et du système ventriculaire. Cela fera ainsi l’objet 
 d’un chapitre dédié au sein duquel nous chercherons en premier lieu à comprendre comment l’arborescence vasculaire, des artères aux veines en passant par les capillaires, se met en place afin d’assurer 
 un apport suffisant en sang aux cellules et quelles en sont les éléments clefs. Nous ferons de même pour le système ventriculaire assurant la circulation du liquide cérébro-spinal. Par la suite, 
-nous évoquerons les outils d’imagerie par résonnance magnétique à notre disposition pouvant fournir une information précise sur les structures du système circulatoire pour un sujet donné pour terminer 
+nous évoquerons les outils d’imagerie par résonance magnétique à notre disposition pouvant fournir une information précise sur les structures du système circulatoire pour un sujet donné pour terminer 
 par la définition d’un protocole d’acquisition morphologique en accord avec les séquences disponibles dans le service.
 
 Le passage de plusieurs images à une structure 3D complète de l’arbre vasculaire est non trivial (\cite{Luboz2005}). Il requiert l’identification des éléments d’intérêt dans l’image. Chaque imagerie fournira ainsi 
