--- a/Chapitre2.tex
+++ b/Chapitre2.tex
@@ -73,7 +73,7 @@ L’ {\em adventice} est composée de tissu de connexion lâche dans lequel se t
 
 La  {\em média} est constituée de  {\em cellules musculaires lisses} (SMC) responsables de la vasomotricité. Elles sont présentes dans les artères cérébrales, les artères pie-mériennes et les artérioles. Leur nombre diminue lorsque le diamètre des vaisseaux décroit.
 
-L’ {\em intima} enfin est formée d’une monocouche de cellules endothéliales qui sont jointives par l’intermédiaire de  {\em jonctions serrées}. Ces jonctions séparent le cerveau du sang par une barrière dite  {\em barrière hémato-encéphalique} (Blood Brain Barrier, BBB). La BBB a une perméabilité sélective pour les molécules lipophiles à faible poids moléculaire et pour celles qui possèdent un transporteur spécifique. Toutefois, les capillaires de certaines régions situées près des ventricules sont fenestrés. Les substances sanguines peuvent alors atteindre le liquide extracellulaire et les neurones, flux dont la modélisation devra tenir compte. En sens inverse, les neurohormones peuvent être déversées dans la circulation qui les transportera vers leurs cibles.
+L’ {\em intima} enfin est formée d’une monocouche de cellules endothéliales qui sont jointives par l’intermédiaire de  {\em jonctions serrées}. Ces jonctions séparent le cerveau du sang par une barrière dite  {\em barrière hémato-encéphalique} (Blood Brain Barrier, BBB). La BBB a une perméabilité sélective pour les molécules lipophiles à faible poids moléculaire et pour celles qui possèdent un transporteur spécifique. Toutefois, les capillaires de certaines régions situées près des ventricules, de l'éminence médiane, de la glande pinéale et de la neurohypophyse entre autres sont fenestrés . Les substances sanguines peuvent alors atteindre le liquide extracellulaire et les neurones, flux dont la modélisation devra tenir compte. En sens inverse, les neurohormones peuvent être déversées dans la circulation qui les transportera vers leurs cibles.
 
 Les artères se caractérisent par une média épaisse. Les artérioles, elles, représentent le site primaire de la résistance vasculaire, ce sont des vaisseaux de faible diamètres (<0.5 mm) disposant d’une paroi épaisse. L’intima est réduite à l’endothélium reposant sur la membrane basale. La média est très musculaire et innervée par le système nerveux sympathique. L’adventice lui, se fond dans le tissu conjonctif environnant. Leur diamètre peut être modifié en fonction de plusieurs facteurs (molécules circulantes, pH, contraintes mécaniques etc.). Les artérioles jouent ainsi un rôle important dans le contrôle du débit sanguin.
 
@@ -214,11 +214,11 @@ Ces approches souffrent actuellement de leur faible résolution, inhérente aux 
 \begin{figure}[!t]
 \centering
 \includegraphics[width=13cm]{1_9_saturation_partielle}
-\caption{Saturation partielle et développement de l'état d'équilibre d'aimantation. A) $T_R  >> T_1$ permettant une refonte complète de la magnétisation avant la 2ieme impulsion RF. B) $T_R$ court, la magnétisation $M_z$ ne peut récupérer avant l’impulsion suivante, ce qui se traduit par l’apparition d’un nouvel état d’équilibre de la magnétisation (M$_{ss}$ , avec M$_{ss}$ < M$_{0}$) après quelques impulsions. }
+\caption{Saturation partielle et développement de l'état d'équilibre d'aimantation. A) $T_R  >> T_1$ permettant une relaxation complète de l'aimantation avant la 2ieme impulsion RF. B) $T_R$ court, l'aimantation $M_z$ ne peut récupérer avant l’impulsion suivante, ce qui se traduit par l’apparition d’un nouvel état d’équilibre de l'aimantation (M$_{ss}$ , avec M$_{ss}$ < M$_{0}$) après quelques impulsions. }
 \label{fig:1_9_saturation_partielle}	
 \end{figure}
 %%%
-L’{\em imagerie par temps de vol} ("Time Of Flight" ou TOF) est une technique d’acquisition sans injection de produit de contraste permettant de mettre en évidence les flux artériels en utilisant les modifications liées au déplacement du volume sanguin, qui ne sera pas soumis à l’ensemble des impulsions radiofréquences contrairement au tissu stationnaire. Ce phénomène, appelé phénomène d’{\em entrée de coupe}, s'obtient en jouant sur la dynamique de la saturation magnétique, {\em via} les valeurs relatives du temps de répétition $T_R$ de l'impulsion radiofréquence et du temps de relaxation $T_1$. Lorsque les impulsions radiofréquences (90°) sont suffisamment éloignées ($T_R > 5  T_1$) la magnétisation longitudinale a le temps de retrouver son état initial (voir Figure~\ref{fig:1_9_saturation_partielle}) avant la prochaine impulsion. En revanche, lorsque les impulsions sont très rapprochées, cette magnétisation ne peut revenir à son état initial, et une plus faible aimantation longitudinale sera disponible pour les impulsions suivantes. Après quelques impulsions RF, un nouvel état d’équilibre moyen apparait (Figure~\ref{fig:1_9_saturation_partielle}) à un niveau inférieur au niveau original, c’est la saturation magnétique (voir pour une explication très claire le site ~\cite{timeflighteffects}).
+L’{\em imagerie par temps de vol} ("Time Of Flight" ou TOF) est une technique d’acquisition sans injection de produit de contraste permettant de mettre en évidence les flux artériels en utilisant les modifications liées au déplacement du volume sanguin, qui ne sera pas soumis à l’ensemble des impulsions radiofréquences contrairement au tissu stationnaire. Ce phénomène, appelé phénomène d’{\em entrée de coupe}, s'obtient en jouant sur la dynamique de la saturation magnétique, {\em via} les valeurs relatives du temps de répétition $T_R$ de l'impulsion radiofréquence et du temps de relaxation $T_1$. Lorsque les impulsions radiofréquences (90°) sont suffisamment éloignées ($T_R > 5  T_1$) l'aimantation longitudinale a le temps de retrouver son état initial (voir Figure~\ref{fig:1_9_saturation_partielle}) avant la prochaine impulsion. En revanche, lorsque les impulsions sont très rapprochées, cette aimantation ne peut revenir à son état initial, et une plus faible aimantation longitudinale sera disponible pour les impulsions suivantes. Après l'impulsions RF, un nouvel état d’équilibre moyen apparait (Figure~\ref{fig:1_9_saturation_partielle}) à un niveau inférieur au niveau original, c’est la saturation magnétique (voir pour une explication très claire le site ~\cite{timeflighteffects}).
 
 Dans une imagerie par temps de vol, les tissus stationnaires sont saturés grâce à des $T_R$ très courts, ce qui conduit à une diminution de leur signal, et induit le phénomène d’entrée de coupe. En effet, comme le sang artériel circulant entrant dans la zone explorée n’a pas été saturé, son aimantation longitudinale est maximale. Le signal du sang entrant apparait alors comme plus important que celui du tissu stationnaire (Figure~\ref{fig:1_8_IRM_temps_de_vol}). La visualisation des structures artérielles peut être ensuite améliorée lors du traitement de l'image par projection des intensités maximales selon différents angles afin d’aboutir à une « pseudo » vue 3D.
 
@@ -250,7 +250,7 @@ Le gradient est orienté de telle façon à ce qu’il soit parallèle au vaisse
 \end{figure}
 Pour étudier les mouvements dans toutes les directions de l’espace, on répète ceci avec des gradients d’encodage de flux dans chacune des trois directions de l’espace. Une acquisition supplémentaire sans gradient d’encodage de flux sert de référence. Les séquences employées sont de type écho de gradient.
 
-Cette technique permet de mesurer de façon relative la vitesse et la direction des flux grâce à l’information de phase. Les flux se dirigeant vers l’examinateur sont codés en blanc, ceux s’en éloignant en noir. On peut ici mesurer des flux plus lents qu’en imagerie par temps de vol (inférieur à 10 cm/sec) pour une durée d'acquisition de 6 min 15 sec. Le contraste obtenu est adapté en particulier à la reconstruction du système veineux.
+Cette technique permet de mesurer de façon relative la vitesse et la direction des flux grâce à l’information de phase. Les flux se dirigeant vers l’examinateur sont codés en blanc, ceux s’en éloignant en noir. On peut ici mesurer des flux plus lents qu’en imagerie par temps de vol (inférieur à 10 cm/sec) pour une durée d'acquisition de 6 min 15 sec. Le contraste obtenu est adapté en particulier à la reconstruction du système veineux. Notons que que cette séquence n'est pas compensée de l'accélération, on considère que celle-ci est constante.
 
 Les images obtenues permettent de visualiser l’ensemble des vaisseaux (Figure~\ref{fig:1_11_exemple_contraste_phase}).
 
@@ -262,9 +262,9 @@ Une autre technique mettant en relief de nouveaux contrastes plus fins a été d
 \begin{equation}
 \bold{M}\,=\,\chi_m\,\bold{B}_0.
 \end{equation}
-On distingue deux comportements différents. Certains comme l’eau, le cuivre ou le zinc, vont s’{\em opposer au champ}, entrainant une diminution de la densité des lignes de forces : on les appelle {\em diamagnétiques} (leur susceptibilité est {\em inférieure à 0}). D’autres au contraire vont se{\em placer dans le sens due champ} (air, fer, magnésium), induisant un accroissement de la densité des lignes de forces : ce sont les substances {\em paramagnétiques} (susceptibilité {\em supérieure à 0}).
+On distingue deux comportements différents. Certains comme l’eau, le cuivre ou le zinc, vont s’{\em opposer au champ}, entrainant une diminution de la densité des lignes de forces : on les appelle {\em diamagnétiques} (leur susceptibilité est {\em inférieure à 0}). D’autres au contraire vont se{\em placer dans le sens due champ} (air, fer, magnésium), induisant un accroissement de la densité des lignes de forces : ce sont les substances {\em paramagnétiques} (susceptibilité {\em supérieure à 0}). Notons cependant que dans le cadre de substances superparamagnétiques, que nous n'évoquerons pas ici, cette équation n'est plus valable.
 
-A l’intérieur du cerveau coexistent des substances possédant différentes propriétés vis-à-vis de la magnétisation : certaines structures vont ainsi être plutôt diamagnétique (myéline) ou paramagnétique (veines, pallidum ; \cite{Wang_Liu_2014}). La possibilité de mesurer quantitativement cette susceptibilité a été évoquée dès les premières années de l’imagerie IRM (\cite{Young1987}). Les variations locales de la susceptibilité engendrent des variations locales concomitantes du champ magnétique effectif subit par le matériau, qui vont engendrer des distorsions locales des lignes de champ et ainsi des décalages en fréquence localisés. Les variations de susceptibilités sont donc à première vue des source d’{\em artéfacts}.  
+A l’intérieur du cerveau coexistent des substances possédant différentes propriétés vis-à-vis de l'aimantation : certaines structures vont ainsi être plutôt diamagnétique (myéline) ou paramagnétique (veines, pallidum ; \cite{Wang_Liu_2014}). La possibilité de mesurer quantitativement cette susceptibilité a été évoquée dès les premières années de l’imagerie IRM (\cite{Young1987}). Les variations locales de la susceptibilité engendrent des variations locales concomitantes du champ magnétique effectif subit par le matériau, qui vont engendrer des distorsions locales des lignes de champ et ainsi des décalages en fréquence localisés. Les variations de susceptibilités sont donc à première vue des source d’{\em artéfacts}.  
 Depuis une quinzaine d'années a été développée une première modalité d’imagerie sensible aux variations de susceptibilité : l’{\em imagerie pondérée en susceptibilité} (Susceptibility Weighted Imaging ou SWI; \cite{Reichenbach2001}). Cette méthode tente d’utiliser l’information portée par l’imagerie de phase afin de fournir un contraste nouveau sensible en particulier aux veines et autres structures disposant d’une forte susceptibilité (cavernomes, calcifications etc.). En effet la saturation en oxygène dans le système veineux étant faible, le sang veineux est riche en dé-oxyhémoglobine, molécule disposant d’une forte susceptibilité. De ce fait cette imagerie donne accès au système veineux et ce potentiellement avec une résolution légèrement plus fine que le contraste de phase (0.6 mm isotropique contre 0.47 x 0.47 x 1 mm$^3$) pour un temps d'acquisition similaire (6 à 7 min). En susceptibilité  l'information récupérée ne dépend pas de l'orientation de gradients, aucun gradients d'encodage de flux n'est utilisé. Cela permet d'avoir accès aux veines peut importe leur orientation (\cite{Fan2014}). L'ensemble conduit à avoir accès à des veines plus petites. En revanche l’image ne contient pas que des vaisseaux, toutes les structures présentant une susceptibilité importante et du fait de la magnitude, les autres tissus. Il reste cependant possible d’extraire une partie des veines de l’image via des algorithmes dédiés (\cite{Manniesing2006}) avec plus ou moins de succès.
 
 %%%
@@ -275,9 +275,9 @@ Depuis une quinzaine d'années a été développée une première modalité d’
 \label{fig:1_11_exemple_contraste_phase}	
 \end{figure}
 
-Rappelons que lors d’une acquisition standard en IRM, le signal récupéré est codé sous forme complexe, et contient donc deux informations : partie imaginaire et partie réelle. Le plus usuellement ces deux informations sont combinées pour générer une imagerie de magnitude correspondant à la somme du carré des parties réelles et imaginaires :
+Rappelons que lors d’une acquisition standard en IRM, le signal récupéré est codé sous forme complexe, et contient donc deux informations : partie imaginaire et partie réelle. Le plus usuellement ces deux informations sont combinées pour générer une imagerie de magnitude correspondant à la racine de la somme du carré des parties réelles et imaginaires :
 \begin{equation}
-M\,=\,Re^2\,+\,Im^2.
+M\,=\sqrt[2]{\,Re^2\,+\,Im^2}.
 \end{equation}
 Cette image de magnitude est la plus utilisée en IRM pour le diagnostic. Elle permet de maximiser le rapport signal sur bruit et fournit le meilleur contraste anatomique. L’image de phase, elle, est obtenue en calculant la tangente inverse du rapport partie imaginaire sur partie réelle :
 \begin{equation}
