--- a/Chapitre3.tex
+++ b/Chapitre3.tex
@@ -22,7 +22,7 @@ L’un des critères importants à prendre en compte lors de la sélection de la
 %%%
 \subsection{Segmentation}
 \label{sec:segmentation}
-Que ce soit en imagerie par temps de vol ou en contraste de phase, les vaisseaux (artères et veines) apparaissent avec une intensité plus élevée que les autres tissus. L’approche la plus simple est donc de seuiller l’image afin d’en extraire les hypersignaux, et donc les vaisseaux. Cette approche permet de récupérer rapidement une segmentation mais le résultat reste très sensible aux inhomogénéités du signal et au bruit, qui peuvent en diminuer la qualité (Figure~\ref{fig:2_1_segmentation_arteres}).
+Que ce soit en imagerie par temps de vol ou en contraste de phase, les vaisseaux (artères et veines) apparaissent avec une intensité plus élevée que les autres tissus. L’approche la plus simple est donc de seuiller l’image afin d’en extraire les hypersignaux, et donc les vaisseaux. Cette approche permet de récupérer rapidement une segmentation mais le résultat reste très sensible aux inhomogénéités du signal et au bruit, ce qui peut entrainer la segmentation de structures autre que des vaisseaux (Figure~\ref{fig:2_1_segmentation_arteres}).
 
 \begin{figure}[!t]
 \centering
@@ -32,7 +32,7 @@ Que ce soit en imagerie par temps de vol ou en contraste de phase, les vaisseaux
 \end{figure}
 Un grand nombre d’outils de segmentation existent dédiés aux images IRM. Mais ils recherchent un but spécifique : l’extraction des différents types de tissus présents dans le cerveau, la matière grise, la matière blanche, et le liquide cérébro-spinal (voir Appendice~\ref{sec:pretrait}).  Les approches optimisées pour ce genre de segmentation ne peuvent pas être appliquées dans le cadre des vaisseaux. Pour ces derniers des approches dédiées ont été développées (\cite{Lesage2009}). Elles se décomposent toutes en deux étapes, chacune devant être optimisée : le prétraitement des images puis la segmentation elle-même.
 
-Les prétraitements consistent à simplifier les informations contenues dans les images d’angiographie IRM. Les traitements génériques disponibles entre lesquels il s’agît de faire un choix ont été développés dans d’autres contextes comme le sous-échantillonnage et la quantification (\cite{Tschirren2005}). Les outils les plus courants restent cependant les filtres améliorant la qualité de l’image. Citons les filtres gradients  (\cite{Koller1995}), les filtres morphologiques (\cite{Wilkinson2001}), ou les filtres à base de matrice Hessienne (\cite{Frangi1998}). Parmi ces techniques, seul le filtre Hessien prend réellement en compte la structure de type tube des vaisseaux en vue d’améliorer leurs visibilité. Il représente ainsi le prétraitement privilégié (\cite{Jin2013}). Le filtre utilisant cette méthode est dit filtre de Frangi  (\cite{Frangi1998},~\cite{Manniesing2006}). Ce filtre vise à extraire une quantité mesurant la vraisemblance pour une région d’appartenir à un vaisseau : on parle de  « vesselness » locale de l’image. L’idée est d’identifier dans l’image les structures en forme de tubes (voir Figure~\ref{fig:2_1_segmentation_arteres}). Mathématiquement, on calcule la matrice Hessienne de l’image à partir de ses dérivées secondes (aux différences finies) et on en extrait des valeurs propres. Ces valeurs propres $\lambda_1$, $\lambda_2$ et $\lambda_3$ (à 3D) caractérisent l’anisotropie des intensités de l’image. Les valeurs propres sont classées par ordre croissant du module ($|\lambda_1|\leqslant|\lambda_2|\leqslant|\lambda_3|$). Un voxel appartenant à un vaisseau doit se caractériser par un ellipsoïde Hessien local allongé : $\lambda_1$ faible (idéalement zéro) et $\lambda_2$ et $\lambda_3$ de grandes magnitudes de mêmes signes. Le tableau de la figure~\ref{fig:2_2_tableau_hessienne} résume les relations existantes entre les valeurs propres de la matrice Hessienne et les différentes structures que l’on cherche à détecter. Avec l’imagerie ToF et le contraste de phase, nous recherchons ainsi les structures claires tubulaires. Le résultat de cette étape est une image dont les intensités représentent pour chaque pixel la vraisemblance d’appartenance à un vaisseau (Figure ~\ref{fig:2_1_segmentation_arteres} C). L’image filtrée est de très bonne qualité (Figure~\ref{fig:2_3_filtre_frangi}). L’utilisation de cet outil moins sensible au bruit et offrant des contours plus lisses, facilite donc les étapes postérieures de traitement. 
+Les prétraitements consistent à simplifier les informations contenues dans les images d’angiographie IRM. Les traitements génériques disponibles entre lesquels il s’agît de faire un choix ont été développés dans d’autres contextes comme le sous-échantillonnage et la quantification (\cite{Tschirren2005}). Les outils les plus courants restent cependant les filtres améliorant le contraste de l’image. Citons les filtres gradients  (\cite{Koller1995}), les filtres morphologiques (\cite{Wilkinson2001}), ou les filtres à base de matrice Hessienne (\cite{Frangi1998}). Parmi ces techniques, seul le filtre Hessien prend réellement en compte la structure de type tube des vaisseaux en vue d’améliorer leurs visibilité. Il représente ainsi le prétraitement privilégié (\cite{Jin2013}). Le filtre utilisant cette méthode est dit filtre de Frangi  (\cite{Frangi1998},~\cite{Manniesing2006}). Ce filtre vise à extraire une quantité mesurant la vraisemblance pour une région d’appartenir à un vaisseau : on parle de  « vesselness » locale de l’image. L’idée est d’identifier dans l’image les structures en forme de tubes (voir Figure~\ref{fig:2_1_segmentation_arteres}). Mathématiquement, on calcule la matrice Hessienne de l’image à partir de ses dérivées secondes (aux différences finies) et on en extrait des valeurs propres. Ces valeurs propres $\lambda_1$, $\lambda_2$ et $\lambda_3$ (à 3D) caractérisent l’anisotropie des intensités de l’image. Les valeurs propres sont classées par ordre croissant du module ($|\lambda_1|\leqslant|\lambda_2|\leqslant|\lambda_3|$). Un voxel appartenant à un vaisseau doit se caractériser par un ellipsoïde Hessien local allongé : $\lambda_1$ faible (idéalement zéro) et $\lambda_2$ et $\lambda_3$ de grandes magnitudes de mêmes signes. Le tableau de la figure~\ref{fig:2_2_tableau_hessienne} résume les relations existantes entre les valeurs propres de la matrice Hessienne et les différentes structures que l’on cherche à détecter. Avec l’imagerie ToF et le contraste de phase, nous recherchons ainsi les structures claires tubulaires. Le résultat de cette étape est une image dont les intensités représentent pour chaque pixel la vraisemblance d’appartenance à un vaisseau (Figure ~\ref{fig:2_1_segmentation_arteres} C). L’image filtrée dispose d'un bon contraste vasculaire (Figure~\ref{fig:2_3_filtre_frangi}). L’utilisation de cet outil moins sensible au bruit et offrant des contours plus lisses, facilite donc les étapes postérieures de traitement. 
 %%%
 \begin{figure}[!t]
 \centering
@@ -66,11 +66,11 @@ A l’issue du prétraitement, les principaux algorithmes de segmentation utilis
 \label{fig:2_comparaisons_segmentations}	
 \end{figure}
 %%
-Afin d'évaluer la pertinence des principales segmentations, nous avons appliqué sur trois images TOF de couvertures anatomiques différentes, différents algorithmes  (Figure~\ref{fig:2_comparaisons_segmentations}). Nous avons ainsi testé le seuillage simple, la croissance de région et le seuillage sur la base d'un filtre de Frangi (prétraitement Hessien). Pour chaque volume TOF, une segmentation manuelle validée par un neuroradiologue a été réalisée pour de servir de référence. Son squelette a ensuite été extrait par amincissement itératif (voir ~\ref{ss:skel}). Notons d'ailleurs que parmi les trois volumes, le premier possède une couverture anatomique proche des données BraVa. Les longueurs des différentes artères sont d'ailleurs en accord avec cette base (voir Table~\ref{tab:databrava}). Chaque méthode requiert l'ajustement de paramètres permettant l'obtention d'une segmentation de bonne qualité. En vue de les optimiser, nous avons établit un score prenant en compte 1) le pourcentage du squelette de référence inclus dans la segmentation, et 2) le rapport moyen entre le volume de la segmentation donnée et de la référence pour les 100 premiers niveaux de coupes (où les vaisseaux sont le plus facilement segmentable). Les paramètres de segmentation sont définis comme optimaux lorsque le score est proche de 2 (somme des deux critères). Un exemple d'identification de ces paramètres est donné en Figure~\ref{fig:2_optimisation_criteres} sur un seuillage après filtre de Frangi.  Comme on le voit, un seuil plus faible que l'optimal permet de récupérer une plus grande partie de l'arbre artériel (67\%) mais avec une surestimation de son volume de l'ordre de 79\%. Une valeur supérieure induit au contraire une perte d'une partie de l'arborescence (43 \%) mais affine le volume (+20\% seulement d'écart avec la référence). Le paramètre optimal assure un compromis entre couverture de l'arbre vasculaire (54\%) et volume (+41\%). On notera ainsi que méthode de Frangi à tendance à surestimer le volume artériel.
+Afin d'évaluer la pertinence des principales segmentations, nous avons appliqué sur trois images TOF de couvertures anatomiques différentes, différents algorithmes  (Figure~\ref{fig:2_comparaisons_segmentations}). Nous avons ainsi testé le seuillage simple, la croissance de région et le seuillage sur la base d'un filtre de Frangi (prétraitement Hessien). Pour chaque volume TOF, une segmentation manuelle validée par un neuroradiologue a été réalisée pour de servir de référence. Son squelette a ensuite été extrait par amincissement itératif (voir ~\ref{ss:skel}). Notons d'ailleurs que parmi les trois volumes, le premier possède une couverture anatomique proche des données BraVa. Les longueurs des différentes artères sont d'ailleurs en accord avec cette base (voir Table~\ref{tab:databrava}). Chaque méthode requiert l'ajustement de paramètres permettant l'obtention d'une segmentation fiable et correcte. En vue de les optimiser, nous avons établit un score prenant en compte 1) le pourcentage du squelette de référence inclus dans la segmentation, et 2) le rapport moyen entre le volume de la segmentation donnée et de la référence pour les 100 premiers niveaux de coupes (où les vaisseaux sont le plus facilement segmentable). Les paramètres de segmentation sont définis comme optimaux lorsque le score est proche de 2 (somme des deux critères). Un exemple d'identification de ces paramètres est donné en Figure~\ref{fig:2_optimisation_criteres} sur un seuillage après filtre de Frangi.  Comme on le voit, un seuil plus faible que l'optimal permet de récupérer une plus grande partie de l'arbre artériel (67\%) mais avec une surestimation de son volume de l'ordre de 79\%. Une valeur supérieure induit au contraire une perte d'une partie de l'arborescence (43 \%) mais affine le volume (+20\% seulement d'écart avec la référence). Le paramètre optimal assure un compromis entre couverture de l'arbre vasculaire (54\%) et volume (+41\%). On notera ainsi que méthode de Frangi à tendance à surestimer le volume artériel.
 
  Les segmentations obtenues par les différentes méthodes après utilisation de ce critère qualité sont illustrées dans la Figure~\ref{fig:2_comparaisons_segmentations}. Le simple seuillage semble offrir la meilleur correspondance en terme de recouvrement de l'aborescence totale pour les trois volumes avec une moyenne de 70\%, en revanche des écarts important en termes de volume peuvent être identifiés. Ceux-ci sont principalement dûs à la segmentation d'autres structures ou de bruit identifié comme du vaisseau à cause des inhomogénéités de signal. Ce phénomène se voit clairement sur les deux derniers volumes. La croissance de région quant à elle offre des résultats mitigés avec seulement 39\% de recouvrement et une sous estimation systématique du volume (-40\%). Cette sous estimation s'explique par le fait que l'algorithme requiert des points initiaux pour développer la segmentation. Selon leur localisation, la méthode segmentera plutot la périphérie du vaisseau ou son centre induisant donc une sous estimation du volume. Le seuillage d'un filtre de Frangi (prétraitement Hessien), permet de récupérer 48\%  de l'arbre vasculaire en moyenne avec une certaine constance. Contrairement au seuillage simple, il ne récupère que les vaisseaux et non le bruit. Le volume est cependant systématiquement sur-estimé. Le détails de cette analyse met en évidence que l'utilisation d'un seul seuil pour tout le volume dilate artificiellement les grosses artères (carotides et basilaire). Nos essais ont montré une surestimation du volume pour ces artères de l'ordre de 30 \% alors que l'écart pour les vaisseaux de plus faibles diamètres est quasi nul. De même le seuil optimal pour les carotides et l'artère basilaire dispose d'un facteur 10 en rapport du seuil global utilisé. Ainsi si l'on recherche un résultat très précis l'utilisation de plusieurs niveau de seuillage semble requis. Notons que nous avons par ailleurs réalisé des essais avec un algorithme de contour actif (non illustrés ici), ceux ci mettent en évidence un temps de traitement bien plus long (en heure contre quelques minutes pour les autres) pour un résultat proche de la croissance de région: sous estimation du volume de l'ordre de -24\% et 41\% de couverture de l'arbre vasculaire pour le premier volume.
 
-Au vue des résultats nous avons choisi la combinaison d’un prétraitement Hessien suivit d’un seuillage simple qui, malgré un recouvrement plus faible de l'arbre vasculaire en comparaison du seuillage simple, assure une identification des vaisseaux uniquement. Le filtre Hessien est en effet robuste dans sa capacité à fournir une image très contrastée des vaisseaux. Un simple seuillage, ajusté manuellement, suffit à extraire le volume 3D des vaisseaux (Figure ~\ref{fig:2_1_segmentation_arteres} D, Figure \ref{fig:2_4_segemtation_cont_phase_tof}). Nous n’avons pas besoin de d’utiliser des algorithmes de croissance de région ou autre. L’utilisateur n’a qu’à adapter le seuil, pour extraire les voxels du masque appartenant aux vaisseaux.  
+Au vue des résultats nous avons choisi la combinaison d’un prétraitement Hessien suivit d’un seuillage simple qui, malgré un recouvrement plus faible de l'arbre vasculaire en comparaison du seuillage simple, assure une identification des vaisseaux uniquement. Le filtre Hessien est en effet robuste dans sa capacité à fournir une image très contrastée des vaisseaux. Un simple seuillage, ajusté manuellement, suffit à extraire le volume 3D des vaisseaux (Figure ~\ref{fig:2_1_segmentation_arteres} D, Figure \ref{fig:2_4_segemtation_cont_phase_tof}). Nous n’avons pas besoin de d’utiliser des algorithmes de croissance de région ou autre. L’utilisateur n’a qu’à adapter le seuil, pour extraire les voxels du masque appartenant aux vaisseaux. Malgré tout il est important de rappeler ici que la comparaison des différentes segmentations, faite sur 3 sujets ici, doit être réalisé sur un plus grand nombre de sujets afin de confirmer nos conclusions.  
 
 
 \begin{figure}[!b]
@@ -94,7 +94,7 @@ Les volumes 3D obtenus (Figure \ref{fig:2_4_segemtation_cont_phase_tof}) reflèt
 %%%
 \subsection{Extraction du squelette}	
 \label{ss:skel}
-La segmentation permet d’aboutir à un volume 3D représentant notre arbre vasculaire. Cependant en l’état il ne renseigne pas sur la structure du réseau. Pour identifier les différents segments et points de jonction, et réduire la quantité de données, il est indispensable d’extraire le squelette du masque et de le représenter sous forme de graphe. 
+La segmentation permet d’aboutir à un volume 3D représentant notre arbre vasculaire. Cependant en l’état il ne renseigne pas sur la structure du réseau. Pour identifier les différents segments et points de jonction, et réduire la quantité de données, il est indispensable d’extraire le squelette du masque et de le représenter sous forme de graphe. Nous allons ainsi rechercher un algorithme de segmentation capable de gérer les fortes tortuosités que l'on peut observer chez les vaisseaux, au risque de récupérer trop de segments qui devront donc ensuite être nettoyés.
 
 Le squelette est une représentation très utilisée car il contient et résume les propriétés topologiques de la forme qu’il représente. Il permet  de décrire les objets par un ensemble de lignes fines réduisant sensiblement le volume d’informations à manipuler. Le squelette est généralement défini comme étant l’ensemble des lignes médianes, c’est-à-dire l’ensemble des points équidistants de deux points de la frontière. Notons que sa construction est très sensible à la qualité de la segmentation, en particulier au bruit. 
 
@@ -172,7 +172,7 @@ On repère tout d’abord les nœuds ayant un double lien direct avec un autre n
 \label{fig:2_11_nettoyage_graphe}	
 \end{figure}	
 
-Cette méthodologie assure une cohérence à la description topologique fournie par le graphe final (Figure~\ref{fig:2_11_nettoyage_graphe}). Notons malgré tout qu’une étape manuelle est indispensable. Au niveau artériel, on demande à l’opérateur 1) de cliquer sur les liens qui lui paraissent complètement incohérents et 2) d’indiquer si la séparation entre les deux artères cérébrales antérieures n’est pas bonne, de manière à dupliquer les segments (un par hémisphère), la segmentation ayant souvent du mal à les séparer.
+Cette méthodologie assure une cohérence à la description topologique fournie par le graphe final (Figure~\ref{fig:2_11_nettoyage_graphe}). Notons malgré tout qu’une étape manuelle est indispensable. Au niveau artériel, on demande à l’opérateur 1) de cliquer sur les liens qui lui paraissent complètement incohérents et 2) d’indiquer si la séparation entre les deux artères cérébrales antérieures n’est pas bonne, de manière à dupliquer les segments (un par hémisphère), la segmentation ayant souvent du mal à les séparer. Cette étape de filtrage aura des influences plus ou moins fortes sur le modèle.
 
 Par ailleurs la construction automatique ultérieure des équations du modèle demandera de re-parcourir ce graphe en disposant d’informations supplémentaires que l’opérateur doit également fournir à ce stade. Au niveau artériel l’utilisateur doit 1) cliquer sur les artères communicantes, s’il y en a, pour les identifier, et 2) indiquer au niveau des principales intersections, les hémisphères (cette information sera propagée dans le reste de l’architecture de proche en proche). Au niveau veineux on demande à l’utilisateur l’identification de l’hémisphère pour les veines latérales.
 
@@ -190,7 +190,7 @@ Les informations artérielles et veineuses peuvent être récupérées par IRM. 
 %%%
 %%%
 \subsection{Quelle artère avec quelle veine ? }
-Dans une première étape nous devons associer une artère et une veine comme cela se produit physiologiquement, l’ensemble constitue un territoire artério-veineux. Il existe une très forte variabilité de ces territoires du côté veineux en particulier (\cite{Reiner2013}). L’information que l’on pourrait souhaiter utiliser serait un atlas des territoires veineux mais cette variabilité rend impossible l'association fine d'une artère à une veine.
+Dans une première étape nous devons associer une artère et une veine comme cela se produit physiologiquement, l’ensemble constitue un territoire artério-veineux. Ce territoire définira ainsi notre microcirculation : les compartiments artériolaires, capillaires, et veinulaires. Il existe une très forte variabilité de ces territoires du côté veineux en particulier (\cite{Reiner2013}). L’information que l’on pourrait souhaiter utiliser serait un atlas des territoires veineux mais cette variabilité rend impossible l'association fine d'une artère à une veine.
 
 En l’état de l’imagerie nous avons sélectionné une approche simple consistant à trouver la veine la plus proche de l’extrémité de chaque branche du système artériel, en utilisant une distance euclidienne. Si ensuite une veine n’est toujours pas reliée à une artère, l’artère la plus proche est réciproquement recherchée et associée à cette veine (Figure~\ref{fig:2_12_liens_arteres_veines}).
 %%%
@@ -285,7 +285,7 @@ Le choix se pose donc entre une approche automatique ayant un coût conséquent 
 d’implémentation et une approche semi-automatique rapide. La deuxième solution, bien que
 nécessitant une intervention de l’utilisateur a été privilégiée. En effet, bien que les algorithmes à
 croissance de région puissent fournir des résultats intéressants, ils ne sont pas infaillibles. Or, la
-manipulation réalisée sous MRIcron est simple, rapide, et assure une bonne qualité des résultats grâce
+manipulation réalisée sous MRIcron est simple, rapide, et assure une bonne fiabilité des résultats grâce
 au contrôle utilisateur.
 La description des volumes correspondant par des géométries cylindriques est imposée par la
 logique de la construction de notre modèle, elle est peu conforme à la réalité structurale. Du point de
