--- a/Chapitre4.tex
+++ b/Chapitre4.tex
@@ -215,7 +215,7 @@ v\,=\,\biggl(\frac{\Delta\phi}{\pi}\biggr)\,*\,V_{enc}.
 Ainsi, grâce à cette équation, il est possible d’estimer la vitesse (en cm/s) dans la direction du codage
 de flux. En multipliant la vitesse par l’aire d’un pixel, on peut aussi estimer le débit (en mL/s). Cela
 permet d’obtenir le débit à travers un vaisseau en multipliant la vitesse moyenne dans la zone d’intérêt
-par l’aire de cette zone.
+par l’aire de cette zone. On rappel que l'on suppose une accélération nulle.
 
 La formule de base du contraste de phase est simple. La vitesse peut être calculée à partir du
 déphasage et de la vitesse d’encodage. Or pour extraire la vitesse moyenne ou le débit au sein d’un
