--- a/Chapitre7.tex
+++ b/Chapitre7.tex
@@ -651,7 +651,7 @@ est possible d’identifier les voxels aberrants si ils appartiennent à des str
 spatiale dans $\phi^0$ . Le critère de lissage de $\phi^0$ est justifié par l’hypothèse que cette distribution est, au
 moins idéalement, dominée par la phase de la sensibilité de réception et de transmission B$_1$ (\cite{Hoult2000}). De
 plus, la phase initiale ne contient aucune évolution temporelle reliée au décalage en fréquence de la
-résonnance du proton. Concrètement, un ajustement d’une fonction polynomiale de degrés 4 est
+résonance du proton. Concrètement, un ajustement d’une fonction polynomiale de degrés 4 est
 effectué en 2D (tranche par tranche) puis soustrait à l’image de phase initiale $\phi^0$ . L’image résultante
 est alors filtrée (filtre 3D gaussien FWHM=2.35 mm) pour réduire le bruit. Les voxels disposant d’une
 valeur plus importante qu’un seuil établi empiriquement ($\pi/8$ voir \cite{Schweser2011}) sont définis comme incohérents.
